@@ -210,6 +210,10 @@ namespace libtorrent
 		void close();
 		bool set_size(size_type size, error_code& ec);
 
+		// called when we're done writing to the file.
+		// On windows this will clear the sparse bit
+		void finalize();
+
 		int open_mode() const { return m_open_mode; }
 
 		// when opened in unbuffered mode, this is the
